codex-rs/tui/src/snapshots/codex_tui__status_indicator_widget__tests__renders_short_details_inline_at_normal_widths.snap
---
source: tui/src/status_indicator_widget.rs
expression: "snapshots.join(\"\\n\\n\")"
---
width 80:
✦ Working · Searching for cache defects · 0s · Esc interrupt

width 120:
✦ Working · Searching for cache defects · 0s · Esc interrupt
