codex-rs/tui/src/snapshots/codex_tui__status_indicator_widget__tests__waiting_terminal_controls_remain_available_across_widths.snap
---
source: tui/src/status_indicator_widget.rs
expression: "snapshots.join(\"\\n\\n\")"
---
width 20:
✦ Waiting · 0s
  ├ Esc interrupt
  ├ Terminal
  ├ /ps inspect
  ├ /stop terminate
  └ cargo test

width 80:
✦ Waiting for background terminal · cargo test · 0s · Esc interrupt
  └ Terminal running · /ps inspect · /stop terminate

width 120:
✦ Waiting for background terminal · cargo test · 0s · Esc interrupt
  └ Terminal running · /ps inspect · /stop terminate
